--- a/config.json
+++ b/config.json
@@ -3,8 +3,12 @@
   "_api_key": "<API_KEY>",
   "_base_url": "<MODEL_URL>",
   "model": "Qwen/Qwen2.5-7B-Instruct",
+  "#model": "Pro/deepseek-ai/DeepSeek-V3",
+  "%model": "Pro/deepseek-ai/DeepSeek-R1",
   "api_key": "<API_KEY>",
   "base_url": "https://api.siliconflow.cn/v1",
+  "temperature": 0.5,
+  "max_tokens": 4096,
   "system_prompt": "You are a helpful assistant capable of accessing external tools and providing informative answers. Engage in a natural, friendly manner while using available tools for real-time information retrieval.\n\n# Tools\n{tools}\n\n# Notes\n- Responses should be based on the latest available data.\n- Maintain an engaging and friendly tone.\n- Highlight the usefulness of tools in assisting users comprehensively.",
   "mcp_servers": [
     {
